--- a/backend/package.json
+++ b/backend/package.json
@@ -4,11 +4,12 @@
     "main": "index.js",
     "license": "MIT",
     "dependencies": {
-      "cors": "^2.8.5",
-      "express": "^4.17.1",
-      "faker": "^5.5.3"
+        "cors": "^2.8.5",
+        "dotenv": "^16.4.5",
+        "express": "^4.17.1",
+        "faker": "^5.5.3"
     },
     "scripts": {
-      "start": "node index.js"
+        "start": "node index.js"
     }
-  }
+}
